# hello-cmake

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: main.cpp
engine/: CMakeLists.txt
engine/src/: Viper.h  operations.cpp  operations.h
engine/src/libs/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h
